--- a/files/style/main.css
+++ b/files/style/main.css
@@ -31,6 +31,7 @@ a { text-decoration: none; }
     width: 80%;
     max-width: 1200px;
     margin: 0 auto;
+    background-color: #fff;
 }
 
 /* ---------- Termina General ---------- */
